# wavs-examples

./: .env.example  .gitignore  AGENT_TOOLS_DESIGN.md  BLOG_AGENTIC_COMMERCE.md  BLOG_DRAFT.md  BLOG_GO.md  BLOG_POST_SANDBOX.md  BLOG_TS.md  BLOG_WHY.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  Dockerfile.wavs  ERC8128_RESEARCH.md  MILESTONE.md  Makefile  PLAN.md  PLAN_AGENTIC_COMMERCE.md  README.md  REGISTRY_BLOG_DRAFT.md  STANDALONE_REPO_PLAN.md  Taskfile.yml  WAVS_DEEP_DIVE_BLOG.md  docker-compose.wavs.yml  package.json  pnpm-lock.yaml  remappings.txt  wavs.toml  wkg.toml
.docker/: service-cid
.planning/: FUTURE.md
blog/: 02-erc8004-wavs-validator.md  03-trigger-types-wishlist.md  wavs-component-gotchas.md
compiled/: aggregator.wasm  golang_evm_price_oracle.wasm
components/_helpers/: Cargo.toml
components/_helpers/src/: trigger.rs
components/_helpers/src/bindings/: world.rs
components/_types/: Cargo.toml
components/_types/src/: lib.rs
components/agentic-commerce-evaluator/: Cargo.toml  README.md
components/agentic-commerce-evaluator/src/: http.rs  lib.rs  trigger.rs
components/agentic-commerce-worker/: Cargo.toml  README.md
components/agentic-commerce-worker/src/: http.rs  lib.rs  llm.rs  trigger.rs
components/aggregator/: Cargo.toml  README.md
components/aggregator/src/: bindings.rs  lib.rs  utils.rs
components/chain-caller/: Cargo.toml
components/chain-caller/src/: lib.rs
components/chain-responder/: Cargo.toml
components/chain-responder/src/: lib.rs  trigger.rs
components/crypto-price/: Cargo.toml
components/crypto-price/src/: lib.rs  trigger.rs
components/echo/: Cargo.toml  Makefile  README.md
components/echo/src/: lib.rs  trigger.rs
components/erc8004-validator/: Cargo.toml  README.md
components/erc8004-validator/src/: lib.rs  trigger.rs
components/erc8128-verifier/: Cargo.toml  Makefile  README.md
components/erc8128-verifier/src/: lib.rs  sig.rs  trigger.rs
components/evm-price-oracle/: Cargo.toml  README.md
components/evm-price-oracle/src/: lib.rs  trigger.rs
components/golang-evm-price-oracle/: Makefile  README.md  go.mod
components/golang-evm-price-oracle/src/: cmc.go  http.go  main.go  trigger.go
components/js-evm-price-oracle/: Makefile  README.md  index.ts  package-lock.json  package.json  trigger.ts  tsconfig.json  wavs_operator_2_7_0.wasm  wavs_operator_2_7_0.wit
components/llm-agent/: Cargo.toml  README.md
components/llm-agent/src/: lib.rs  trigger.rs
components/llm-commerce-evaluator/: Cargo.toml  README.md
components/llm-commerce-evaluator/src/: bindings.rs  lib.rs  llm.rs  trigger.rs
components/llm-oracle/: Cargo.toml  README.md
components/llm-oracle/src/: lib.rs  trigger.rs
components/python-evm-price-oracle/: Makefile  PLAN.md  README.md  component.py  http_client.py  trigger.py
components/python-evm-price-oracle/wit-clean/: operator.wit
components/weather-oracle/: Cargo.toml  Makefile  README.md
components/weather-oracle/src/: lib.rs
deploy/: build-service.ts  constants.ts  deploy-contracts.ts  deploy-script.ts
deploy/templates/: operator.env
examples/agents/01-agentic-commerce/: README.md
script/: Deploy.s.sol  DeployAgenticCommerce.s.sol  DeployChainTrigger.s.sol  DeployErc8004.s.sol  DeployLLMOracle.s.sol  DeployTools.s.sol
script/template/: .env.example.operator
scripts/: demo-agentic-commerce.sh  deploy-chain-trigger.sh  deploy-erc8004.sh  deploy-go-price-oracle.sh  deploy-js-price-oracle.sh  deploy-llm-agent.sh  deploy-llm-oracle.sh  deploy-local.sh  deploy-python-price-oracle.sh  deploy-weather.sh
src/contracts/: AgentSubmit.sol  LLMSubmit.sol  SimpleServiceManager.sol  ValidationSubmit.sol  ValidationTrigger.sol
src/interfaces/: IValidationTypes.sol
taskfile/: config.yml  env.yml  poa-operator.yml  services.yml
test/unit/: AgenticCommerce.t.sol
wit-aggregator/: aggregator.wit
(+11 files in other folders)
