[package]
name = "aggregator"
edition.workspace = true
version.workspace = true
authors.workspace = true
rust-version.workspace = true
repository.workspace = true

[lib]
crate-type = ["cdylib"]

[profile.release]
codegen-units = 1
opt-level = "s"
debug = false
strip = true
lto = true

[package.metadata.component]
package = "component:aggregator"

[dependencies]
alloy-primitives = { workspace = true }
alloy-network = { workspace = true }
alloy-provider = { workspace = true }
wit-bindgen = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
wavs-wasi-utils = { workspace = true }
wstd = { workspace = true }
