[package]
name = "echo"
edition.workspace = true
version.workspace = true
authors.workspace = true
rust-version.workspace = true
repository.workspace = true

[dependencies]
wit-bindgen = { workspace = true }
wavs-wasi-utils = { workspace = true }
alloy-sol-macro = { workspace = true }
alloy-sol-types = { workspace = true }
anyhow = { workspace = true }
serde_json = { workspace = true }

[lib]
crate-type = ["cdylib"]

[profile.release]
codegen-units = 1
opt-level = "s"
debug = false
strip = true
lto = true

[package.metadata.component]
package = "component:echo"
